--- a/cicd/Jenkinsfile
+++ b/cicd/Jenkinsfile
@@ -1,19 +1,13 @@
 pipeline {
   agent any
-
   environment {
-    AWS_REGION   = 'us-east-1'
-    ENV_NAME     = 'dev'
-    PROJECT      = 'my-project'
-    // Option A: Jenkins "AWS Credentials" plugin can inject env vars; or use withCredentials below.
+    AWS_REGION = 'us-east-1'
   }
 
   stages {
-    stage('Checkout') {
-      steps { checkout scm }
-    }
+    stage('Checkout') { steps { checkout scm } }
 
-    stage('Build Python venv') {
+    stage('Install') {
       steps {
         sh '''
           python3 -m venv .venv
@@ -26,28 +20,17 @@ pipeline {
 
     stage('Deploy') {
       steps {
-        // Option B: store AWS keys in Jenkins credentials as "Username with password"
-        // where username=AWS_ACCESS_KEY_ID, password=AWS_SECRET_ACCESS_KEY
-        withCredentials([usernamePassword(credentialsId: 'aws-access-keys-dev',
-                         usernameVariable: 'AWS_ACCESS_KEY_ID',
-                         passwordVariable: 'AWS_SECRET_ACCESS_KEY')]) {
+        withCredentials([usernamePassword(
+          credentialsId: 'aws-access-keys-dev',
+          usernameVariable: 'AWS_ACCESS_KEY_ID',
+          passwordVariable: 'AWS_SECRET_ACCESS_KEY'
+        )]) {
           sh '''
             . .venv/bin/activate
-            python deploy.py \
-              --config config/env-dev.json \
-              --region ${AWS_REGION} \
-              --env ${ENV_NAME} \
-              --project ${PROJECT}
+            python deploy.py --config config/dev.json --region $AWS_REGION
           '''
         }
       }
     }
   }
-
-  post {
-    always {
-      sh 'rm -rf .venv || true'
-    }
-  }
 }
-
