--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ logs
 *.jar
 *.zip
 .venv/
-__pycache__/
 build/
 npm-debug.log*
 yarn-debug.log*
@@ -13,6 +12,11 @@ pnpm-debug.log*
 lerna-debug.log*
 cdk.out
 coverage/*
+
+# Python bytecode
+__pycache__/
+*.py[cod]
+
 
 node_modules
 dist
